fixed overflow text error in popup window

--- a/src/styles/UserPopup.module.css
+++ b/src/styles/UserPopup.module.css
@@ -7,10 +7,12 @@
 
 .user_popup ul {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  align-items: start;
+  /* align-items: start; */
   list-style-type: none;
   box-sizing: border-box;
+  /* background-color: aqua; */
 }
 
 .user_popup ul li {
@@ -41,4 +43,12 @@
   align-items: center;
   flex-wrap: nowrap;
   gap: 8px;
+}
+
+.user_info div p:first-child {
+  text-transform: capitalize;
+}
+
+.user_info div p:last-child {
+  font-size: 12px;
 }
